--- a/docs/Modelagem/2.2.1.DiagramaDeSequencia.md
+++ b/docs/Modelagem/2.2.1.DiagramaDeSequencia.md
@@ -2,13 +2,82 @@
 
 ## Introdução
 
+O Diagrama de Sequência UML é um tipo de diagrama usado na Modelagem Orientada a Objetos e faz parte da Unified Modeling Language (UML). Ele tem como principal objetivo ilustrar como os objetos de um sistema interagem entre si ao longo do tempo, detalhando a sequência de mensagens trocadas entre eles. O Diagrama de Sequência é uma ferramenta essencial na Engenharia de Software, pois permite que os desenvolvedores e analistas compreendam e documentem a dinâmica de interações dentro do sistema, melhorem a comunicação entre equipes, identifiquem falhas de design e otimizem o desempenho do sistema. Sua importância vai além do design inicial, sendo útil durante todas as fases do ciclo de vida do software, incluindo desenvolvimento, testes e manutenção. Este documento descreve a modelagem UML dinâmica para o projeto Tsírko, conforme especificado na entrega 2, focando no diagrama de sequência, que é um diagrama UML dinâmico.
+
+
 ## Metodologia
+
+A partir dos requisitos levantados, os alunos João Pedro, Rodrigo, Vinícius e Yves elaboraram os primeiros protótipos e a partir deles foi feito um novo Diagrama feito por Carlos Gabriel, Rodrigo Mattos, Amanda Alves e Isaque Santos em grupo. Foram utilizadas várias ferramentas para a elaboração dos diagramas entre eles o PlantUML, Draw.io e Lucidchart. 
+
+
+### Legenda
+<p align="center" > <font><strong>Tabela 1:</strong> Legenda do diagrama de sequência</font> <br></p>
+
+|Elemento|Nome|Função|
+|:--:|:--:|:--:|
+|<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/objeto.drawio.png" alt="Objeto" width="100px">|Objetos|Representa uma classe ou objetos em UML. O símbolo do objeto demonstra como um objeto se comportará no contexto do sistema. Atributos de classe não devem ser listados nesta forma.|
+|<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/caixaDeAtivacao.drawio.png" alt="Caixa" width="100px">|Caixa de Ativação|Representa o tempo necessário para que um objeto conclua uma tarefa. Quanto mais tempo a tarefa levar, mais alongada a caixa de ativação se torna.|
+|<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/ator.drawio.png" alt="Ator" width="100px">|Ator|Mostra as entidades que interagem com, ou são externas ao sistema.|  
+|<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/pacote.drawio.png" alt="Pacote" width="100px">|Pacote|Usada em notação UML 2.0 para conter elementos interativos do diagrama. Também conhecida como quadro, esta forma retangular tem um pequeno retângulo interno para rotular o diagrama. | 
+|<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/user.drawio.png" alt="User" width="100px">|User|Representa a passagem do tempo, conforme estende-se para baixo. Esta linha vertical tracejada mostra os eventos sequenciais que ocorrem a um objeto durante o processo no gráfico. Linhas da vida podem começar com uma forma de retângulo rotulado ou um símbolo de ator. | 
+|<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/loop.drawio.png" alt="loop" width="100px">|Loop|Usado para modelar cenários “se/então”, ou seja, uma circunstância que ocorrerá apenas sob determinadas condições. | 
+|<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/alternativo.drawio.png" alt="alternativo" width="100px">|Símbolo Alternativo|Simboliza uma escolha (geralmente mutuamente exclusiva) entre duas ou mais sequências de mensagens. Para representar alternativas, use a forma de retângulo rotulada com uma linha tracejada em seu interior. | 
+|<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/mensagemSincrona.drawio.png" alt="Mensagem Síncrona" width="100px">|Símbolo de Mensagem Síncrona|Representado por uma linha sólida com uma ponta de seta sólida. Este símbolo é usado quando um remetente deve esperar por uma resposta a uma mensagem antes de poder continuar. O diagrama deve mostrar tanto a chamada quanto a resposta. | 
+|<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/mensagemAssincrona.drawio.png" alt="Mensagem Assíncrona" width="100px">|Símbolo de Mensagem Assíncrona|Representado por uma linha sólida com uma ponta de seta em linha. Mensagens assíncronas não necessitam de uma resposta para que o remetente continue. Apenas a chamada deve ser incluída no diagrama. |
+|<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/retorno.drawio.png" alt="retorno" width="100px">|Símbolo de mensagens de retorno assíncronas|Representado por uma linha tracejada com uma ponta de seta em linha.|
+|<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/criarMensagem.drawio.png" alt="create" width="100px">|Símbolo assíncrono de criar mensagens |Representado por uma linha tracejada com uma ponta de seta em linha. Esta mensagem cria um novo objeto.|
+
+<font size="3"><p style="text-align: center">Autor: [João Pedro](https://github.com/joaopedrodasilvarodrigues)</p></font>
+
+
 
 ## Diagramas de Sequência
 
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 1:</b> Diagrama de Sequência João Pedro da Silva</p></font>
+
+![Figura1](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Joao_Pedro_DiagramaDeSequencia.png)
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/joaopedrodasilvarodrigues">João Pedro da Silva</a></p></font> 
+</div>
+
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 2:</b> Diagrama de Sequência Rodrigo Mattos</p></font>
+
+![Figura1](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Rodrigo_DiagramaDeSequencia.png)
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/Rodrigomfab88">Rodrigo Mattos</a></p></font> 
+</div>
+
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 3:</b> Diagrama de Sequência Vinícius Gabriel</p></font>
+
+![Figura1](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Vinicius_Brito_DiagramaDeSequencia.png)
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/vini051">Vinícius Gabriel</a></p></font> 
+</div>
+
+
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 4:</b> Diagrama de Sequência Yves Gustavo Ribeiro</p></font>
+
+![Figura1](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Yves_DiagramaDeSequencia.png)
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/Yvestxt">Yves Gustavo Ribeiro</a></p></font> 
+</div>
+
+
 ## Análise e Resultado
+
+Os diagramas de Sequência criados individualmente pelos integrantes do grupo providenciam diferentes visões em relação ao funcionamento do sistema, isso tudo foi levado em consideração na elaboração do diagrama de Sequência final. 
+
+O diagrama do [João Pedro](https://github.com/joaopedrodasilvarodrigues) fornece uma perspectiva interessante sobre como a sequência de eventos envolvida na compra de ingressos, e como esses eventos se comportam com o decorrer do tempo. 
+
+O diagrama do [Rodrigo Mattos](https://github.com/Rodrigomfab88) nos mostra como a sequência de procedimentos envolvidos na consulta de eventos no site e os procedimentos da consulta de aulas se comportam do início ao fim e nos permite comparar a eficiência dessas consultas através do tempo que as duas demoram para serem efetudas. 
+
+O diagrama do [Vinícius](https://github.com/vini051) nos mostra uma perspectiva mais ampla do projeto, abordando um número maior de funcionalidades do projeto, nos permitindo ver que o processo de compra de ingresso é com certeza o processo maix complexo de toda a aplicação. 
+
+O diagrama do [Yves](https://github.com/Yvestxt) por outro lado é o diagrama que analisa o maior número de funcionalidades da aplicação, nos mostrando o quando o projeto como um todo é altamente complexo, pois possui um grande número de processos.
+
 
 ## Histórico de Versão
 | Versão | Data       | Descrição                                      | Autor               | Revisor               |
 |--------|------------|------------------------------------------------|---------------------|-----------------------|
 | 1.0    | 23/11/2024 | Primeira versão do artefato | [Amanda Campos](https://github.com/acamposs) | [Autor](https://github.com/autor) |
+| 1.1    | 28/11/2024 | Analise dos diagramas individuais e finalização do artefato | [João Pedro](https://github.com/joaopedrodasilvarodrigues) | [Autor](https://github.com/autor) |
