--- a/docs/Modelagem/2.2.1.DiagramaDeSequencia.md
+++ b/docs/Modelagem/2.2.1.DiagramaDeSequencia.md
@@ -44,7 +44,7 @@ A partir dos requisitos levantados, os alunos João Pedro, Rodrigo, Vinícius e 
 <font size="3"><p style="text-align: center"><b>Figura 2:</b> Diagrama de Sequência Rodrigo Mattos</p></font>
 
 ![Figura1](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Rodrigo_DiagramaDeSequência.png)
-<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/joaopedrodasilvarodrigues">João Pedro da Silva</a></p></font> 
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/Rodrigomfab88">Rodrigo Mattos</a></p></font> 
 </div>
 
 <div align="center">
