--- a/docs/Modelagem/2.1.2.DiagramaDeComponentes.md
+++ b/docs/Modelagem/2.1.2.DiagramaDeComponentes.md
@@ -14,7 +14,7 @@ Para criar o diagrama de componentes do Tsírko, nós, [Gabriel](https://github.
 
 |                                               Elemento                                                |        Nome         |                                                        Função                                                        |
 | :---------------------------------------------------------------------------------------------------: | :-----------------: | :------------------------------------------------------------------------------------------------------------------: |
-|             <img src="../assets/componentecomponente.png" alt="Componente" width="100px">             |     Componente      |                               Unidade modular do sistema com interfaces bem definidas.                               |
+|<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/componentecomponente.png" alt="Componente" width="100px">|     Componente      |                               Unidade modular do sistema com interfaces bem definidas.                               |
 |              <img src="../assets/componenteporta.drawio.png" alt="Porta" width="100px">               |        Porta        | Um ponto de interação definido na borda de um componente, onde o componente pode interagir com seu ambiente externo. |
 |        <img src="../assets/componentedependencia.drawio.png" alt="Dependência" width="100px">         |     Dependência     |                     Relação onde um componente depende de outro para seu funcionamento completo                      |
 | <img src="../assets/componenteinterfacerequerida.drawio.png" alt="Interface Requerida" width="100px"> | Interface Requerida |                          Indica que o componente necessita dessa interface para funcionar.                           |
