--- a/docs/Modelagem/2.1.2.DiagramaDeComponentes.md
+++ b/docs/Modelagem/2.1.2.DiagramaDeComponentes.md
@@ -12,15 +12,13 @@ Para criar o diagrama de componentes do Tsírko, nós, [Gabriel](https://github.
 
 <p align="center" > <font><strong>Tabela 1:</strong> Legenda do Diagrama de Componentes</font> <br></p>
 
-|                                               Elemento                                                |        Nome         |                                                        Função                                                        |
-| :---------------------------------------------------------------------------------------------------: | :-----------------: | :------------------------------------------------------------------------------------------------------------------: |
-|<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/componente.drawio.png" alt="Componente" width="100px">|     Componente      |                               Unidade modular do sistema com interfaces bem definidas.                               |
-|              <img src="../assets/componenteporta.drawio.png" alt="Porta" width="100px">               |        Porta        | Um ponto de interação definido na borda de um componente, onde o componente pode interagir com seu ambiente externo. |
-|        <img src="../assets/componentedependencia.drawio.png" alt="Dependência" width="100px">         |     Dependência     |                     Relação onde um componente depende de outro para seu funcionamento completo                      |
-| <img src="../assets/componenteinterfacerequerida.drawio.png" alt="Interface Requerida" width="100px"> | Interface Requerida |                          Indica que o componente necessita dessa interface para funcionar.                           |
-| <img src="../assets/componenteinterfacefornecida.drawio.png" alt="Interface Fornecida" width="100px"> | Interface Fornecida |           Indica que o componente implementa e fornece essa interface para outros componentes utilizarem.            |
+|Elemento|Nome|Função|
+|:--:|:--:|:--:|
+|<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/componentecomponente.png" alt="Componente" width="100px">|Componente|Representa uma entidade no sistema, definindo um conjunto de atributos (propriedades) e métodos (comportamentos) que descrevem suas características e ações.|
+|<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/relacionamento.drawio.png" alt="Relacionamento" width="100px">|Relacionamento|Representa a conexão entre duas ou mais classes no diagrama, indicando como elas interagem ou dependem umas das outras.|
+|<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/composicao.drawio.png" alt="Composicao" width="100px">|Composição|Representa um relacinamento todo/parte onde a parte é essencial para o todo. Se o objeto "todo" for destruído, os objetos "parte" também são.| 
+|<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/heranca.drawio.png" alt="Heranca" width="100px">|Herança|Representa um relacionamento "é um" entre classes, onde uma classe filha (subclasse) herda atributos e métodos de uma classe pai (superclasse).| 
 
----
 
 ## Diagramas de Componentes
 
