--- a/docs/Modelagem/2.1.2.DiagramaDeComponentes.md
+++ b/docs/Modelagem/2.1.2.DiagramaDeComponentes.md
@@ -14,7 +14,7 @@ Para criar o diagrama de componentes do Tsírko, nós, [Gabriel](https://github.
 
 |Elemento|Nome|Função|
 |:--:|:--:|:--:|
-|<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/componentecomponente.png" alt="Componente" width="100px">|Componente|Representa uma entidade no sistema, definindo um conjunto de atributos (propriedades) e métodos (comportamentos) que descrevem suas características e ações.|
+|<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/componente.drawio.png" alt="Componente" width="100px">|Componente|Representa uma entidade no sistema, definindo um conjunto de atributos (propriedades) e métodos (comportamentos) que descrevem suas características e ações.|
 |<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/relacionamento.drawio.png" alt="Relacionamento" width="100px">|Relacionamento|Representa a conexão entre duas ou mais classes no diagrama, indicando como elas interagem ou dependem umas das outras.|
 |<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/composicao.drawio.png" alt="Composicao" width="100px">|Composição|Representa um relacinamento todo/parte onde a parte é essencial para o todo. Se o objeto "todo" for destruído, os objetos "parte" também são.| 
 |<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/heranca.drawio.png" alt="Heranca" width="100px">|Herança|Representa um relacionamento "é um" entre classes, onde uma classe filha (subclasse) herda atributos e métodos de uma classe pai (superclasse).| 
