--- a/docs/Modelagem/2.1.2.DiagramaDeComponentes.md
+++ b/docs/Modelagem/2.1.2.DiagramaDeComponentes.md
@@ -16,7 +16,7 @@ Para criar o diagrama de componentes do Tsírko, nós, [Gabriel](https://github.
 |:--:|:--:|:--:|
 |<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/componente.drawio.png" alt="Componente" width="100px">|Componente|Unidade modular do sistema com interfaces bem definidas. |
 |<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/componenteporta.drawio.png" alt="Porta" width="100px">|Porta|Um ponto de interação definido na borda de um componente, onde o componente pode interagir com seu ambiente externo. |
-|<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/componentedependencia.drawio.png" alt="Dependencia" width="100px">|Dependencia|Relação onde um componente depende de outro para seu funcionamento completo. | 
+|<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/componentedependencia.drawio.png" alt="Dependencia" width="100px">|Porta|Um ponto de interação definido na borda de um componente, onde o componente pode interagir com seu ambiente externo. |
 |<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/componenteinterfacerequerida.drawio.png" alt="Interface" width="100px">|Interface Requerida|Indica que o componente necessita dessa interface para funcionar.| 
 |<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/componenteinterfacefornecida.drawio.png" alt="Interface" width="100px">|Interface Fornecida|Indica que o componente implementa e fornece essa interface para outros componentes utilizarem.| 
 
