rastreio dos diagramas individuais em todos os históricos de versão

--- a/docs/Modelagem/2.1.1.DiagramaDeClasses.md
+++ b/docs/Modelagem/2.1.1.DiagramaDeClasses.md
@@ -85,5 +85,5 @@ O diagrama do [Bittar](https://github.com/Bittarx) possui métodos que represent
 | Versão | Data       | Descrição                                      | Autor               | Revisor               |
 |--------|------------|------------------------------------------------|---------------------|-----------------------|
 | 1.0    | 23/11/2024 | Primeira versão do artefato | [Amanda Campos](https://github.com/acamposs) | [Autor](https://github.com/autor) |
-| 1.1    | 28/11/2024 | Construção dos diagramas individuais de classes | [Amanda Campos](https://github.com/acamposs), [José Filipe](https://github.com/JoseFilipi), [Rodrigo Mattos](https://github.com/Rodrigomfab88), [Marcos Santos Bittar](https://github.com/Bittarx) e [Yves Gustavo](https://github.com/Yvestxt)  | [Autor](https://github.com/autor) |
+| 1.1    | 28/11/2024 | Diagramas individuais de classes | [Amanda Campos](https://github.com/acamposs), [José Filipe](https://github.com/JoseFilipi), [Rodrigo Mattos](https://github.com/Rodrigomfab88), [Marcos Santos Bittar](https://github.com/Bittarx) e [Yves Gustavo](https://github.com/Yvestxt)  | [Autor](https://github.com/autor) |
 | 1.2    | 28/11/2024 | Versão final do artefato | [Vinícius Brito](https://github.com/vini051)                                                                                                                                       | [João](https://github.com/joaopedrodasilvarodrigues) |
