--- a/docs/Modelagem/2.1.3.DiagramaDeImplantacao.md
+++ b/docs/Modelagem/2.1.3.DiagramaDeImplantacao.md
@@ -87,5 +87,5 @@ Apresenta uma arquitetura dividida em três zonas principais: cliente (com PC e 
 
 | Versão | Data       | Descrição                   | Autor                                                                                                                                                                      | Revisor                                              |
 | ------ | ---------- | --------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------- |
-| 2.0    | 28/11/2024 | Diagramas                   | [Carlos](https://github.com/TheCarlosRamos), [Henrique](https://github.com/HeBatalha), [Isaque](https://github.com/IsaqueSH), [Vinicius Brito](https://github.com/vini051) | [Yves](https://github.com/yvestxt)                   |
+| 2.0    | 28/11/2024 | Diagramas individuais                 | [Carlos](https://github.com/TheCarlosRamos), [Henrique](https://github.com/HeBatalha), [Isaque](https://github.com/IsaqueSH), [Vinicius Brito](https://github.com/vini051) | [Yves](https://github.com/yvestxt)                   |
 | 1.0    | 28/11/2024 | Primeira versão do artefato | [Vinicius Brito](https://github.com/vini051)                                                                                                                               | [João](https://github.com/joaopedrodasilvarodrigues) |
