--- a/docs/Modelagem/2.2.1.DiagramaDeSequencia.md
+++ b/docs/Modelagem/2.2.1.DiagramaDeSequencia.md
@@ -80,4 +80,5 @@ O diagrama do [Yves](https://github.com/Yvestxt) por outro lado é o diagrama qu
 | Versão | Data       | Descrição                                      | Autor               | Revisor               |
 |--------|------------|------------------------------------------------|---------------------|-----------------------|
 | 1.0    | 23/11/2024 | Primeira versão do artefato | [Amanda Campos](https://github.com/acamposs) | [Autor](https://github.com/autor) |
-| 1.1    | 28/11/2024 | Analise dos diagramas individuais e finalização do artefato | [João Pedro](https://github.com/joaopedrodasilvarodrigues) | [Autor](https://github.com/autor) |
+| 1.1    | 28/11/2024 | Diagramas individuais de sequência | [João Pedro](https://github.com/joaopedrodasilvarodrigues), [Rodrigo Mattos](https://github.com/Rodrigomfab88), [Vinícius](https://github.com/vini051), [Yves](https://github.com/Yvestxt)   | [Autor](https://github.com/autor) |
+| 1.2    | 28/11/2024 | Analise dos diagramas individuais e finalização do artefato | [João Pedro](https://github.com/joaopedrodasilvarodrigues) | [Autor](https://github.com/autor) |
