--- a/docs/Modelagem/2.2.2.DiagramaDeAtividades.md
+++ b/docs/Modelagem/2.2.2.DiagramaDeAtividades.md
@@ -63,4 +63,5 @@ Cada diagrama desenvolvido possui suas características e diversidades que, em m
 | Versão | Data       | Descrição                                      | Autor               | Revisor               |
 |--------|------------|------------------------------------------------|---------------------|-----------------------|
 | 1.0    | 23/11/2024 | Primeira versão do artefato | [Amanda Campos](https://github.com/acamposs) | [Autor](https://github.com/autor) |
-| 1.1   | 28/11/2024 | Criação do artefato Diagrama de Atividades | [Isaque Santos](https://github.com/IsaqueSH) | [Amanda Campos](https://github.com/acamposs), [Carlos Gabriel](https://github.com/TheCarlosRamos), [Rodrigo Bezerra](https://github.com/Rodrigomfab88)   |
+| 1.1    | 28/11/2024 | Diagramas individuais de atividades | [Amanda ](https://github.com/acamposs), [Isaque](https://github.com/IsaqueSH), [Bittar](https://github.com/Bittarx) | [Rodrigo Bezerra](https://github.com/Rodrigomfab88) |
+| 1.2   | 28/11/2024 | Criação do artefato Diagrama de Atividades | [Isaque Santos](https://github.com/IsaqueSH) | [Amanda Campos](https://github.com/acamposs), [Carlos Gabriel](https://github.com/TheCarlosRamos), [Rodrigo Bezerra](https://github.com/Rodrigomfab88)   |
