--- a/docs/Modelagem/2.2.3.DiagramaDeComunicacao.md
+++ b/docs/Modelagem/2.2.3.DiagramaDeComunicacao.md
@@ -71,6 +71,7 @@ Os diagramas de comunicação fornecem uma visão clara e detalhada das interaç
 | Versão | Data       | Descrição                                   | Autor(es)       | Revisor(es) |
 | ------ | ---------- | ------------------------------------------- | --------------- | ----------- |
 | 1.0    | 23/11/2024 | Primeira versão do artefato | [Amanda Campos](https://github.com/acamposs) | [Autor](https://github.com/autor) |
-| 1.1    | 27/11/2024 | Criação do artefato Diagrama de Comunicação | [Carlos Gabriel](https://github.com/TheCarlosRamos) | [Isaque Santos](https://github.com/IsaqueSH) [Amanda Campos](https://github.com/acamposs) [Rodrigo Bezerra](https://github.com/Rodrigomfab88)           |
+| 1.1    | 27/11/2024 | Diagramas individuais de comunicação | [Carlos](https://github.com/TheCarlosRamos), [Gabriel](https://github.com/gabrielfreitass1), [Magno](https://github.com/magnluiz) | [Amanda Campos](https://github.com/acamposs) |
+| 1.2    | 27/11/2024 | Criação do artefato Diagrama de Comunicação | [Carlos Gabriel](https://github.com/TheCarlosRamos) | [Isaque Santos](https://github.com/IsaqueSH) [Amanda Campos](https://github.com/acamposs) [Rodrigo Bezerra](https://github.com/Rodrigomfab88)           |
 
 
