--- a/docs/Modelagem/2.3.1.DiagramaDePacotes.md
+++ b/docs/Modelagem/2.3.1.DiagramaDePacotes.md
@@ -86,4 +86,5 @@ Renata Hansen Silva, Elaine de Oliveira Zanini. Disponível em: https://www4.fag
 | Versão | Data       | Descrição                                      | Autor               | Revisor               |
 |--------|------------|------------------------------------------------|---------------------|-----------------------|
 | 1.0    | 28/11/2024 | Primeira versão dos Diagramas de Pacotes | [Gabriel Freitas](https://github.com/gabrielfreitass1) <br> [Henrique Batalha](https://github.com/HeBatalha) <br> [José Filipi](https://github.com/JoseFilipi) | [Raphael](https://github.com/Raphides) |
-| 1.1    | 28/11/2024 | Revisão ortográfica e adiciona diagrama individual Vinícius | [Gabriel Freitas](https://github.com/gabrielfreitass1) <br> [Henrique Batalha](https://github.com/HeBatalha) <br> [José Filipi](https://github.com/JoseFilipi) | [Raphael](https://github.com/Raphides) |
+| 1.1    | 28/11/2024 | Diagramas individuais de pacotes | [Amanda](https://github.com/acamposs), [Gabriel](https://github.com/gabrielfreitass1), [José](https://github.com/JoseFilipi), [Magno](https://github.com/magnluiz), [Raphael](https://github.com/Raphides), [Yves](https://github.com/Yvestxt), [Vinícius](https://github.com/vini051)   | [Raphael](https://github.com/Raphides) |
+| 1.2    | 28/11/2024 | Revisão ortográfica e adiciona diagrama individual Vinícius | [Gabriel Freitas](https://github.com/gabrielfreitass1) <br> [Henrique Batalha](https://github.com/HeBatalha) <br> [José Filipi](https://github.com/JoseFilipi) | [Raphael](https://github.com/Raphides) |
