--- a/docs/Modelagem/2.3.2.DiagramaDeCasosDeUso.md
+++ b/docs/Modelagem/2.3.2.DiagramaDeCasosDeUso.md
@@ -77,5 +77,6 @@ Casos de Uso. Professora Dra. Elisa Yumi Nakagawa. Disponível em: https://edisc
 | Versão | Data       | Descrição                                      | Autor               | Revisor               |
 |--------|------------|------------------------------------------------|---------------------|-----------------------|
 | 1.0    | 27/11/2024 | Primeira versão dos Casos de Uso| [Gabriel Freitas](https://github.com/gabrielfreitass1) <br> [Henrique Batalha](https://github.com/HeBatalha) <br> [José Filipi](https://github.com/JoseFilipi) | [Raphael](https://github.com/Raphides) |
-| 1.1    | 28/11/2024 | Atualização das imagens e Referências Bibliograficas| [Gabriel Freitas](https://github.com/gabrielfreitass1)| [Yves Pimenta](https://github.com/Yvestxt) |
+| 1.1    | 28/11/2024 | Diagramas individuais de casos de uso | [Carlos](https://github.com/TheCarlosRamos), [Henrique](https://github.com/HeBatalha), [Isaque](https://github.com/IsaqueSH), [João Pedro](https://github.com/joaopedrodasilvarodrigues), [Rodrigo](https://github.com/Rodrigomfab88)   | [Raphael](https://github.com/Raphides) |
+| 1.2    | 28/11/2024 | Atualização das imagens e Referências Bibliograficas| [Gabriel Freitas](https://github.com/gabrielfreitass1)| [Yves Pimenta](https://github.com/Yvestxt) |
 
